--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ a{
 }
 nav{     
     padding:10px 0;
-    background-color:#e8ded2;
+    background-color:#a3d2ca;
     position: sticky;
     top:0;
     width:100%;
@@ -66,7 +66,7 @@ nav ul li a:hover{
     border:none;
     border-radius:5px;
     font-weight: bold;
-    Background-color:#94a8a2;
+    Background-color:#5eaaa8;
     color: #fff;
 }
 .card{
@@ -74,6 +74,14 @@ nav ul li a:hover{
     border-radius:5px;
     padding:20px;
     margin-top: 20px;
+ }
+ .jumbotron{
+    width:100%;
+    height:300px;
+ }
+ .jumbotron img{
+     width: 100%;
+     height:300px;
  }
 
 
