--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #d5ded7;
+    background-color: #fff;
 }
 a{
     color:inherit;
@@ -30,7 +30,7 @@ a{
     
 }
 .container {
-        width:90%;
+        width:100%;
         margin:0 auto;       
 }
 .container:after{
@@ -39,7 +39,7 @@ a{
     clear: both;
 }
 nav{     
-    padding:10px 0;
+    padding:5px 0;
     background-color:#a3d2ca;    
     width:100%;
     box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.2);
@@ -48,11 +48,10 @@ nav{
  nav  a img{    
      display:inline-block;
      padding-left:60px;
-     width:300px;
+     width:150px;
 } nav ul {
     text-align:center;
     float: right;
-    padding-top:25px;
     padding-right:80px;
     
 }
@@ -60,7 +59,7 @@ nav ul li {
     display:inline-block;
 }
 nav ul li a{
-    padding:20px 15px;
+    padding:12px 5px;
     display:inline-block;
 }
 nav ul li a:hover{
@@ -73,7 +72,6 @@ nav ul li a:hover{
  .swiper-container {
     width: 100%;
     height: 350px;
-    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding:20px;
 }
 
