--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,8 @@ aside{
     width:25%;
 }
 .card{
-    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:-6px -5px 25px -6px rgba(0,0,0,0.75);
     border-radius:5px;
     padding:20px;
-    margin-top: 20px;    
+    margin-top: 10px;    
 }
