--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,49 +6,27 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #fff;
+    background-color: #f9f8eb;
 }
-a{
-    color:inherit;
-    text-decoration: none;
-}
-.medsos ul li a:hover{
-     
-    color: #d5ded7;
-       
-}
-.medsos{
-    padding:40px,0;
-    background-color: #5eaaa8;
-}
-.medsos ul li{
-    padding: 5px;
-    display:inline-block;
-    font-size: 0.95em;
-    color: #fff;
-    margin-right: 10px;
-    
-}
-.container {
-        width:100%;
-        margin:0 auto;       
-}
-.container:after{
-    content:'';
-    display:block;
-    clear: both;
-}
-nav{     
-    padding:5px 0;
-    background-color:#a3d2ca;    
+
+nav{       
+    padding:12px 0;
+    background-color:#76b39d;    
     width:100%;
-    box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.2);  
+    position:sticky;
+    top:0; 
+}
+nav a{
+    color:#fff;
+    text-decoration: none;
 }
 
  nav  a img{    
      display:inline-block;
      padding-left:60px;
-     width:150px;
+     width:100px;
+    
 } nav ul {
     text-align:center;
     float: right;
@@ -66,36 +44,134 @@ nav ul li a:hover{
     border:none;
     border-radius:5px;
     font-weight: bold;
-    Background-color:#5eaaa8;
+    Background-color:#155e63;
     color: #fff;
+}
+ .mobile-menu {
+    padding:5px;
+    padding-right: 25px;
+	float: right;
+	display: none;    
+    color:#fff;
+}
+.mobile-menu:hover {
+	cursor: pointer;
+}
+#check {
+	display: none;
+}
+.sidebar {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: -300px;
+	width:200px;
+    background-color:rgba(49, 136, 114, 0.9);
+	transition: .3s;
+	z-index: 9999;
+}
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+.sidebar ul li {
+	padding:24px;
+	transition: .3s;
+	transition-property: background-color;
+}
+.sidebar ul li:hover {
+    background-color: #155e63;
+    font-weight: bold;
+}
+#check:checked ~ .sidebar {
+	left: 0;
 }
  .swiper-container {
     width: 100%;
     height: 350px;
     padding:20px;
+    
 }
-
 .swiper-button-prev{
-    color: #5eaaa8 !important;
+    color: #155e63 !important;
 }
 .swiper-button-next{
-    color: #5eaaa8 !important;
+    color: #155e63 !important;
 }
 .swiper-slide img{
     width:100%;
     height:350px;
 }
-#content{
-    float:left;
-    width:75%;
+article{
+    width:75%+
 }
-aside{
-    float:right;
-    width:25%;
+Article h3 {
+	padding-bottom: 20px;
+	text-align: center;
+	margin:30px;
+    position: relative;
+    font-size: 40px;
+    color:#155e63;
 }
-.card{
-    box-shadow:-6px -5px 25px -6px rgba(0,0,0,0.75);
-    border-radius:5px;
-    padding:20px;
-    margin-top: 10px;    
+Article h3::before {
+	content:'';
+	display: block;
+	position: absolute;
+	bottom: 0;
+	width:120px;
+	height:1px;
+	background-color: #76b39d;
+	left: calc(50% - 60px);
+}
+Article h3::after {
+	content:'';
+	display: block;
+	position: absolute;
+	bottom: -1px;
+	width:40px;
+	height:5px;
+	background-color: #155e63;
+	left: calc(50% - 20px);
+}
+  p {
+	text-align: justify;
+	text-indent: 30px;
+	line-height: 25px;
+    margin-bottom: 5px;
+    padding-right:20px;
+       
+}
+Article  img {
+	text-align: center;
+    float: left;
+    width:390px;
+    height:290px;
+    padding-right:30px;
+}
+.container {
+    padding: 30px;
+    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius:5px;    
+    margin-top: 20px;
+    margin-left: 10px;
+}
+.container::after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+@media (max-width: 768px){
+	.mobile-menu {
+		display: block;
+	}
+	nav ul {
+		display: none;
+    }	
+    .swiper-container {
+        width: 100%;
+        height: 350px;
+        padding:20px;
+        
+    }
 }
