--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,15 @@
 body{
     background-color: #f9f8eb;
 }
-
+header{
+    display:inline;
+}
 nav{       
     padding:12px 0;
     background-color:#76b39d;    
     width:100%;
     box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.2);  
-    position:sticky;
+    position:sticky !important;
     top:0; 
 }
 nav a{
@@ -103,7 +105,7 @@ nav ul li a:hover{
     height:350px;
 }
 article{
-    width:75%+
+    width:75%;
 }
 Article h3 {
 	padding-bottom: 20px;
