--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ nav{
     box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.2);  
     position:sticky !important;
     top:0; 
+    z-index: 99;
 }
 nav a{
     color:#fff;
@@ -33,7 +34,7 @@ nav a{
     text-align:center;
     float: right;
     padding-right:80px;
-    
+   
 }
 nav ul li {
     display:inline-block;
